--- a/BIN_Investor_Form.html
+++ b/BIN_Investor_Form.html
@@ -5,9 +5,14 @@
     <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
     <title>Asset Consolidation Form</title>
     <style>
+        body{
+            font-size: 20px;
+        }
         img {
             width: 35px;
             height: 35px;
+            border: solid 1px #9090cd;
+            border-radius: 50%;
         }
     
         button {
@@ -15,7 +20,7 @@
         }
     
         .single-entry {
-            font-size: 0.8em;
+            font-size: 1.2em;
             border: darkblue solid 2px;
             margin: 1em;
             border-radius: 1em;
